--- a/monografia.tex
+++ b/monografia.tex
@@ -6,8 +6,8 @@
 %  - Graduação: bacharelado|engenharia|licenciatura
 %  - Pós-graduação: [qualificacao], mestrado|doutorado, ppca|ppginf
 
-% \documentclass[engenharia]{UnB-CIC}%
-\documentclass[qualificacao,mestrado,ppca]{UnB-CIC}%
+ \documentclass[engenharia]{UnB-CIC}%
+%\documentclass[qualificacao,mestrado,ppca]{UnB-CIC}%
 
 \usepackage{pdfpages}% incluir PDFs, usado no apêndice
 
@@ -15,17 +15,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Informações do Trabalho
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\orientador{\prof \dr Guilherme Novaes Ramos}{CIC/UnB}%
+\orientador{\prof \dr Ricardo Zelenovsky}{ENE/UnB}%
 %\coorientador{\prof \dr José Ralha}{CIC/UnB}
-\coordenador[a]{\prof[a] \dr[a] Ada Lovelace}{Bibliothèque universelle de Genève}%
-\diamesano{24}{dezembro}{2014}%
+\coordenador[a]{\prof[o] \dr[o] Ada Lovelace}{Bibliothèque universelle de Genève}%
+\diamesano{18}{dezembro}{2020}%
 
-\membrobanca{\prof \dr Donald Knuth}{Stanford University}%
-\membrobanca{\dr Leslie Lamport}{Microsoft Research}%
+\membrobanca{\prof \dr Membro da banca 1}{Instituição}%
+\membrobanca{\dr Membro da banca 2}{Instituição}%
 
-\autor{Guilherme N.}{Ramos}%
+\autor{José Luiz G.}{Nogueira}%
 
-\titulo{UnB-CIC: Uma classe em LaTeX para textos do Departamento de Ciência da Computação}%
+\titulo{Caixa Preta para Veículos Automotivos: Dashboard modular para visualização de dados de sensores inerciais em matlab  }%
 
 \palavraschave{LaTeX, metodologia científica, trabalho de conclusão de curso}%
 \keywords{LaTeX, scientific method, thesis}%
@@ -37,9 +37,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
     \capitulo{1_Introducao}{Introdução}%
-    \capitulo{2_UnB-CIC}{A Classe \unbcic}%
-    \capitulo{3_TCC}{Trabalho de Conclusão de Curso}%
-    \capitulo{4_Apresentacao}{Apresentações}%
+    \capitulo{2_Fund_teorica}{Fundamentação Teórica}%
+    \capitulo{3_Dashboard}{Painel de dados}%
+    \capitulo{4_Analise_de_dados}{Análise de Dados}%
+    \capitulo{5_Conclusao}{Conclusão}%
+    \capitulo{6_Planejamento}{Planejamento TCC2}%
 
     \apendice{Apendice_Fichamento}{Fichamento de Artigo Científico}%
     \anexo{Anexo1}{Documentação Original \unbcic\ (parcial)}%
