--- a/monografia.tex
+++ b/monografia.tex
@@ -10,6 +10,7 @@
 %\documentclass[qualificacao,mestrado,ppca]{UnB-CIC}%
 
 \usepackage{pdfpages}% incluir PDFs, usado no apêndice
+\usepackage{hyperref}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -25,7 +26,7 @@
 
 \autor{José Luiz G.}{Nogueira}%
 
-\titulo{Caixa Preta para Veículos Automotivos: Dashboard modular para visualização de dados de sensores inerciais em matlab  }%
+\titulo{Caixa Preta para Carros: Comparação de métodos de estimativa de inclinação usando dados do MPU9250}%
 
 \palavraschave{LaTeX, metodologia científica, trabalho de conclusão de curso}%
 \keywords{LaTeX, scientific method, thesis}%
@@ -37,12 +38,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}%
     \capitulo{1_Introducao}{Introdução}%
-    \capitulo{2_Fund_teorica}{Fundamentação Teórica}%
-    \capitulo{3_Dashboard}{Painel de dados}%
-    \capitulo{4_Analise_de_dados}{Análise de Dados}%
-    \capitulo{5_Conclusao}{Conclusão}%
-    \capitulo{6_Planejamento}{Planejamento TCC2}%
-
-    \apendice{Apendice_Fichamento}{Fichamento de Artigo Científico}%
-    \anexo{Anexo1}{Documentação Original \unbcic\ (parcial)}%
+    % \capitulo{2_Fund_teorica}{Fundamentação Teórica}%
+    % \capitulo{3_Dashboard}{Painel de dados}%
+    % \capitulo{4_Analise_de_dados}{Análise de Dados e Comparação de Métodos}%
+    % \capitulo{5_Conclusao}{Conclusão}%
+    \capitulo{6_conclusao}{Concluído no TCC1}%
+    \capitulo{7_Planejamento}{X1- Planejamento TCC2}%
+    
+    \apendice{Apendice_main}{Fluxograma do programa}%
 \end{document}%
