--- a/tex/4_Analise_de_dados.tex
+++ b/tex/4_Analise_de_dados.tex
@@ -1,1 +1,5 @@
+A análise de acurácia será feita medindo a capacidade do método de remover o vetor de aceleração com precisão sem movimentos de rotação, levando em consideração que os dados de aceleração tem ruídos. E comparando com o movimento realizado na prática e medido com um transferidor.
+
+\textcolor{red}{Comparar dados com e sem o magnetômetro?}
+
 \section{}
