--- a/tex/5_Conclusao.tex
+++ b/tex/5_Conclusao.tex
@@ -1,2 +1,20 @@
 \section{Resultados Obtidos}
 \section{Trabalhos Futuros}
+Aumentar a velocidade de execução dos cálculos, utilizando programação dinâmica, evitando re-cálculos e utilizando paralelismo.
+
+Aumentar a velocidade de plotagem, utilizando módulos de plotagem de mais baixo nível do matlab, ou outra biblioteca gráfica se possível.
+
+Permitir que os parâmetros de ajustes dos filtros e demais cálculos sejam alterados em tempo de execução por meio da própria interface.
+
+Permitir seleção da porta COM, e do tipo de leitura por meio da interface gráfica.
+
+Adicionar outros métodos de fusão de dados, outros usos do filtro de kalman, para comparação.
+
+Adicionar modulo que permita fundir dados do GPS para estimativa de posição e velocidade instantânea.
+
+Adicionar modulo que permita fundir múltiplos sensores de inercia, como 2 MPUs ou mais.
+
+Comparar os dados de estimativa de inclinação tendo como base um sensor de inclinação preciso.
+
+Comparar outros métodos p/ estimativa de velocidade e posição espacial fundindo dados com o \acrshort{GPS}.
+
